Wed Nov 12 07:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/README:
          Updated

Tue Nov 11 22:22:04 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_sys_mman.inl (mmap): Added a fix for a problem where
          ACE_OS::mmap() failed when called with
          file_handle=ACE_INVALID_HANDLE and file_mapping=0.  Thanks to
          Bill Rizzi <rizzi at softserv dot com> for this fix.  This fixes
          bugid 3500.

Tue Nov 11 14:24:00 UTC 2008  Simon Massey<sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Another wchar issue.

Tue Nov 11 13:52:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/config-lynxos.h:
          Missed removal of ACE_HAS_SYSV_IPC for LynxOS5.0.

Tue Nov 11 13:34:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Cached_Conn_Test.cpp:
          Print a timestamp with each iteration

Tue Nov 11 13:26:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Check the return value of thr_setprio

        * ace/Process.cpp:
          Always initialize process_name_

        * ace/Process_Manager.cpp:
          Use this->

        * tests/OS_Test.cpp:
          WinCE can't rename when the target already exists

        * tests/Reactor_Dispatch_Order_Test.cpp:
          Const change

Tue Nov 11 10:43:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Fixed rename on WinCE

Tue Nov 11 10:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_VxWorks.pm:
          Just use the WaitForFileTimed from the base

        * bin/tao_orb_tests.lst:
          Enabled some tests for Labview/WinCE

Mon Nov 10 23:28:36 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * bin/tao_other_tests.lst:

          Added regression test for bug 3495.

Mon Nov 10 20:16:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>